homeworks/kuber-homeworks/1.4/service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: multi-svc
spec:
  selector:
    app: multi-app
  ports:
  - name: nginx
    port: 9001
    targetPort: 80
  - name: multitool
    port: 9002
    targetPort: 8080
