homeworks/kuber-homeworks/1.4/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: multi-svc-nodeport
spec:
  type: NodePort
  selector:
    app: multi-app
  ports:
  - name: nginx
    port: 80
    targetPort: 80
    nodePort: 30080
